--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Блог возможностей
+email: nazarov755@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Всё про технологии и реализуемые с их помощью возможности
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://755.github.io" # the base hostname & protocol for your site
+twitter_username: nazarov_nick
+github_username:  755
 
 # Build settings
 markdown: kramdown
