--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Блог возможностей
 email: nazarov755@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Всё про технологии и реализуемые с их помощью возможности
+description: "Всё про технологии и реализуемые с их помощью возможности"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://755.github.io" # the base hostname & protocol for your site
+enforce_ssl: 755.github.io
 twitter_username: nazarov_nick
 github_username:  755
 
